fix(block): 修复农场方块和喷泉方块的异常处理并添加日志记录
- 更新 DataConfig 添加 Boss 农场的生成蛋产物配置
- 为储物喷泉添加多种材料标签配方变体
- 更新版本号从 0.0.7 到 0.8